updated novel info

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3631,6 +3631,10 @@ $arrow-color: #fff;
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-9 {
+    grid-template-columns: repeat(9, minmax(0, 1fr));
+  }
+
   .md\:grid-rows-1 {
     grid-template-rows: repeat(1, minmax(0, 1fr));
   }
